<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sample_date"
        android:layout_marginLeft="@dimen/textview_margin"
        android:layout_marginRight="@dimen/textview_margin"
        app:layout_constraintTop_toTopOf="@id/button_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_edit"
        app:layout_constraintBottom_toBottomOf="@id/button_edit"/>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_edit_note_24"
        android:text="@string/edit"
        android:drawableTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/button_margin"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/button_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.coffeeDetail.CoffeeDetailEditFragment">

            <ImageView
                android:id="@+id/imageview_coffee"
                android:layout_width="@dimen/image_size_coffee_detail"
                android:layout_height="@dimen/image_size_coffee_detail"
                android:layout_marginTop="@dimen/image_margin"
                android:src="@drawable/ic_baseline_android_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_title"
                android:textSize="@dimen/text_size_detail_title"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/imageview_coffee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/textview_margin" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_country"
                android:layout_width="@dimen/coffee_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_title"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_country_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_country"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toTopOf="@id/textview_country"
                app:layout_constraintStart_toEndOf="@id/textview_country"
                app:layout_constraintBottom_toBottomOf="@id/textview_country"
                app:layout_constraintEnd_toEndOf="@id/textview_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_farm"
                android:layout_width="@dimen/coffee_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/farm"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_country"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_farm_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_farm"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toTopOf="@id/textview_farm"
                app:layout_constraintStart_toEndOf="@id/textview_farm"
                app:layout_constraintBottom_toBottomOf="@id/textview_farm"
                app:layout_constraintEnd_toEndOf="@id/textview_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_process"
                android:layout_width="@dimen/coffee_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/process"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_farm"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_process_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_process"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toTopOf="@id/textview_process"
                app:layout_constraintStart_toEndOf="@id/textview_process"
                app:layout_constraintBottom_toBottomOf="@id/textview_process"
                app:layout_constraintEnd_toEndOf="@id/textview_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_roaster"
                android:layout_width="@dimen/coffee_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/roaster"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_process"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_roaster_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_roaster"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toTopOf="@id/textview_roaster"
                app:layout_constraintStart_toEndOf="@id/textview_roaster"
                app:layout_constraintBottom_toBottomOf="@id/textview_roaster"
                app:layout_constraintEnd_toEndOf="@id/textview_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_roasting_degree"
                android:layout_width="@dimen/coffee_detail_text_width"
                android:layout_height="wrap_content"
                android:text="@string/roasting_degree"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_roaster"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_roasting_degree_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_roasting_degree"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toTopOf="@id/textview_roasting_degree"
                app:layout_constraintStart_toEndOf="@id/textview_roasting_degree"
                app:layout_constraintBottom_toBottomOf="@id/textview_roasting_degree"
                app:layout_constraintEnd_toEndOf="@id/textview_title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_comment"
                android:textSize="@dimen/text_size_detail"
                app:layout_constraintTop_toBottomOf="@id/textview_roasting_degree"
                app:layout_constraintStart_toStartOf="@id/textview_title"
                app:layout_constraintEnd_toEndOf="@id/textview_title"
                android:layout_marginTop="@dimen/textview_margin"/>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/favorite_button_selector"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/imageview_coffee"
                app:layout_constraintEnd_toStartOf="@+id/imageview_coffee"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
